<resources>
    <string name="app_name">CurrencyConverterApp</string>
    <string name="titleText">Currency Converter App</string>
    <string name="dollar_amount">Dollar Amount ($):</string>
    <string name="convert_to">Convert to:</string>
    <string name="convert">Convert</string>
    <string name="close">Close</string>
    <string name="dollar_amount_result_text">Converted Amount</string>
    <string-array name="spinner_items">
        <item>British Pound</item>
        <item>Euro</item>
        <item>Indian Rupee</item>
    </string-array>
</resources>
