<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="337dp"
        android:layout_height="56dp"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        android:text="@string/titleText"
        android:textColor="@android:color/background_dark"
        android:textColorHighlight="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dollar-amount"
        android:layout_width="154dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:labelFor="@+id/dollar-editText"
        android:text="@string/dollar_amount"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <EditText
        android:id="@+id/dollar-editText"
        android:layout_width="168dp"
        android:layout_height="32dp"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="24dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/convertTextView"
        android:layout_width="152dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/convert_to"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dollar-amount" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="172dp"
        android:layout_height="34dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="47dp"
        android:background="@android:color/background_light"
        android:entries="@array/spinner_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dollar-editText" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="146dp"
        android:layout_height="65dp"
        android:layout_marginBottom="160dp"
        android:layout_marginStart="28dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="onConvert"
        android:text="@string/convert"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/closeApp"
        android:layout_width="139dp"
        android:layout_height="67dp"
        android:layout_marginBottom="160dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/holo_red_light"
        android:onClick="closeApp"
        android:text="@string/close"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/convertedAmount"
        android:layout_width="306dp"
        android:layout_height="78dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="27dp"
        android:layout_marginStart="27dp"
        android:text="@string/dollar_amount_result_text"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>